kubernetes/apps/travel-price-map-redirects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-price-map-redirects-ingress
  namespace: travel-price-map-redirects
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "certificate-issuer"
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 https://github.com/juliuste/travel-price-map;
  labels:
    app.kubernetes.io/name: travel-price-map-redirects-ingress
    app.kubernetes.io/instance: travel-price-map-redirects
spec:
  tls:
    - hosts:
      - "pricemap.eu"
      - "www.pricemap.eu"
      - "api.pricemap.eu"
      secretName: travel-price-map-redirects-tls
  rules:
    - host: pricemap.eu
    - host: www.pricemap.eu
    - host: api.pricemap.eu
